Uncovered a bug with igdbId that I fixed.

--- a/src/main/Team121GBCapstoneProject/Team121GBCapstoneProject/wwwroot/css/site.css
+++ b/src/main/Team121GBCapstoneProject/Team121GBCapstoneProject/wwwroot/css/site.css
@@ -211,6 +211,6 @@ div {
   padding: 10px;
 }
 
-.card.redtoblue-gradient {
-    background-image: linear-gradient(red, blue);
+.card.redtoorange-gradient {
+    background-image: linear-gradient(red, orange);
 }
